--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+   <!-- <data>
 
+        <variable
+            name="employee"
+            type="com.employee.domain.model.EmployeeData"
+            />
+    </data>-->
     <TextView
         android:id="@+id/employeeTitle"
         android:layout_width="wrap_content"
@@ -21,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Welcome back Kunwar"
+        android:text="Welcome back $"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,3 +141,6 @@
         app:layout_constraintTop_toTopOf="@+id/edit_fab" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--
+</layout>-->
